adjust active nav item background

--- a/less/variables.less
+++ b/less/variables.less
@@ -160,7 +160,7 @@
 @navbarLinkColorHover:            @white;
 @navbarLinkColorActive:           @bannerText;
 @navbarLinkBackgroundHover:       transparent;
-@navbarLinkBackgroundActive:      @navbarBackground;
+@navbarLinkBackgroundActive:      rgba(0,0,0,0.2);
 
 @navbarSearchBackground:          lighten(@navbarBackground, 25%);
 @navbarSearchBackgroundFocus:     @white;
